# pypkgs_drzum

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypkgs_drzum.rst
tests/: test_pypkgs_drzum.py
