[tool.poetry]
name = "pypkgs_drzum"
version = "0.1.0"
description = "Python package that eases the pain of concatenating Pandas categoricals!"
authors = ["Zeliha Ural Merpez <zelhaaa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"
